@@ -43,6 +43,8 @@ AutoTools_0 = _('Autoconf and Automake')
 AutoTools_1 = _('Automatically generate configure scripts and GNU Standard makefiles')
 Avidemux_0 = 'Avidemux'
 Avidemux_1 = _('Video editor which can do simple cutting, filtering and encoding tasks. It supports scripts and automated job queue.')
+Backintime_0 = 'Back In Time'
+Backintime_1 = _('Incremental backup tool supporting schedule')
 Banshee_0 = 'Banshee'
 Banshee_1 = _('Media player and media manager written in Mono and Gtk#. It is the default media player for several Linux distribution.')
 Bluefish_0 = 'Bluefish'
