@@ -233,3 +233,10 @@ class Mobloquer(_apt_install):
     category = 'internet'
     ppa = 'jre-phoenix'
     pkgs = 'moblock mobloquer'
+
+class Backintime(_apt_install):
+    __doc__ = 'Back In Time'
+    detail = _('Incremental backup tool supporting schedule')
+    category = 'security'
+    ppa = 'bit-team/testing'
+    pkgs = 'backintime-gnome'
